--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "postinstall": "flowbite-react patch"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "flowbite-react": "^0.11.8",
     "next": "15.3.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
